<resources>
    <string name="app_name">DAZS</string>
    <string-array name="drawer_items_portuguese">
        <item>Home</item>
        <item>Vocabulário</item>
        <item>Notícias e Textos</item>
        <item>Navegar</item>
        <item>Tandem</item>
        <item>Biblioteca pessoal</item>
        <item>Dicionário</item>
        <item>Câmera</item>
        <item>Produtos para mim</item>
        <item>Configurações</item>
        <item>Sobre nós</item>
    </string-array>
    <string-array name="drawer_items_english">
        <item>Home</item>
        <item>Vocabulary</item>
        <item>News and Texts</item>
        <item>Use the internet</item>
        <item>Tandem</item>
        <item>My words and texts</item>
        <item>Dictionary</item>
        <item>Camera</item>
        <item>Products for me</item>
        <item>Settings</item>
        <item>About Us</item>
    </string-array>
    <integer-array name="drawer_items_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_vocabulary</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_online</item>
        <item>@drawable/ic_tandem</item>
        <item>@drawable/ic_bookshelf</item>
        <item>@drawable/ic_dictionary</item>
        <item>@drawable/ic_camera</item>
        <item>@drawable/ic_products</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_help</item>
    </integer-array>
    <array name="drawer_items">
        <item>@array/drawer_items_portuguese</item>
        <item>@array/drawer_items_english</item>
    </array>
    <string-array name="gender_array">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Prefiro não responder</item>
    </string-array>

    <string-array name="languages_array">
        <item>Português</item>
        <item>Inglês</item>
        <item>Alemão</item>
    </string-array>

    <!-- Login Activity -->
    <string name="login_activity_email_field">Digite seu e-mail</string>
    <string name="login_activity_email_field_error">Digite um e-mail válido</string>
    <string name="login_activity_password_field">Digite sua senha</string>
    <string name="login_activity_password_field_error">A senha deve ter ao menos 6 caracteres</string>
    <string name="login_activity_remain_conected">Permanecer conectado</string>
    <string name="login_activity_login_button_text">Login</string>
    <string name="login_activity_signup_button_text">Nova conta</string>
    <string name="login_activity_invalid_user_error">Usuário não cadastrado</string>

    <!-- Signup Activity -->
    <string name="signup_activity_toolbar_title" >Bem-vindo ao DAZS!</string>
    <string name="signup_activity_name_field">Digite seu nome</string>
    <string name="signup_activity_name_field_error">Digite um nome válido</string>
    <string name="signup_activity_age_field">Idade</string>
    <string name="signup_activity_gender_field">Gênero</string>
    <string name="signup_activity_age_field_error">Favor digitar sua idade</string>
    <string name="signup_activity_email_field">Digite seu e-mail</string>
    <string name="signup_activity_email_field_error">Digite um e-mail válido</string>
    <string name="signup_activity_native_language_field">Língua materna</string>
    <string name="signup_activity_native_language_field_error">Por favor digite a sua língua materna</string>
    <string name="signup_activity_country_field">País</string>
    <string name="signup_activity_country_field_error">Favor digitar nome de seu país</string>
    <string name="signup_activity_languages_field">Quero aprender</string>
    <string name="signup_activity_languages_field_error">Escolha um ou mais idiomas</string>
    <string name="signup_activity_city_field">Cidade</string>
    <string name="signup_activity_city_field_error">Digite o nome de uma cidade</string>
    <string name="signup_activity_neighborhood_field">Bairro</string>
    <string name="signup_activity_neighborhood_field_error">Digite o nome de um bairro</string>
    <string name="signup_activity_password_field">Senha</string>
    <string name="signup_activity_password_field_error">A senha deve ter ao menos 6 caracteres</string>
    <string name="signup_activity_password_fields_dismatch_error">As senhas não são iguais</string>
    <string name="signup_activity_password_confirmation_field">Confirmação</string>
    <string name="signup_activity_create_account_button_text">Criar conta</string>

    <!-- Dialog Items -->
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_loading_title">Carregando</string>
</resources>
