<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cyan_lightest"
    android:clickable="true">
    <android.support.v7.widget.Toolbar
        android:id="@+id/base_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/cyan_darkest">
        <politcc2017.tcc_app.Components.CustomTextView
            android:id="@+id/base_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bem-vindo ao DAZS!"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">
        <politcc2017.tcc_app.Components.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextMediumBlack"
            android:text="Digite seu nome" />
        <politcc2017.tcc_app.Components.CustomEditText
            android:id="@+id/signup_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:validation_type="default_mandatory"
            app:error_message="@string/login_activity_email_field_error"/>
        <politcc2017.tcc_app.Components.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextMediumBlack"
            android:text="@string/login_activity_email_field" />
        <politcc2017.tcc_app.Components.CustomEditText
            android:id="@+id/login_activity_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:validation_type="email"
            app:error_message="@string/login_activity_email_field_error"/>
        <politcc2017.tcc_app.Components.CustomTextView
            style="@style/TextMediumBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/login_activity_password_field" />
        <politcc2017.tcc_app.Components.CustomEditText
            android:id="@+id/login_activity_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:validation_type="password"
            app:error_message="@string/login_activity_password_field_error"/>
        <politcc2017.tcc_app.Components.CustomButton
            android:id="@+id/login_activity_login_button"
            style="@style/FullWidthButton"
            android:text="@string/login_activity_login_button_text"/>
        <politcc2017.tcc_app.Components.CustomButton
            android:id="@+id/login_activity_signup_button"
            style="@style/LinkButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/login_activity_signup_button_text"/>
    </LinearLayout>
</LinearLayout>
